# shredstream-tui

./: .gitignore  Cargo.toml  README.md
src/: client.rs  events.rs  main.rs  programs.rs  state.rs  ui.rs
